--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 PORT = 8000
 NODE_ENV = development
 JWT_SECRET_KEY = 2jkljasdlfh83r746w58tigajlhdfalsdf
-DATABASE_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_old?connection_limit=15&pool_timeout=5&pgbouncer=true"
-DIRECT_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_old"
+# DATABASE_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_old?connection_limit=15&pool_timeout=5&pgbouncer=true"
+# DIRECT_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_old"
+DATABASE_URL="mysql://Jayesh:Jayesh%40123@localhost:3306/single_aviator?connection_limit=15&pool_timeout=5&pgbouncer=true"
+DIRECT_URL="mysql://Jayesh:Jayesh%40123@localhost:3306/single_aviator"
 client = "https://aviator.metablocktechnologies.org"
 adminClient = "https://aviatoradmin.metablocktechnologies.org"
 DAMAN_ADMIN_AVIATOR = https://damanadmin.lakshmigame.com
