aviator-jackpot-minified

--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 PORT = 8000
 NODE_ENV = development
 JWT_SECRET_KEY = 2jkljasdlfh83r746w58tigajlhdfalsdf
-# DATABASE_URL="mysql://METAGURU:METAGURU@!123@191.101.14.109:3306/METAGURU?connection_limit=50&pool_timeout=10&pgbouncer=true"
-# DIRECT_URL="mysql://METAGURU:METAGURU@!123@191.101.14.109:3306/METAGURU"
-DATABASE_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_new?connection_limit=15&pool_timeout=5&pgbouncer=true"
-DIRECT_URL="mysql://Jayesh:Jayesh%40123@89.116.20.79:3306/daman_new"
-DAMAN_ADMIN_AVIATOR = https://admin.goalotteryhub.com
+DATABASE_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/single_aviator?connection_limit=15&pool_timeout=5&pgbounce=true"
+DIRECT_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/single_aviator"
+client = https://aviatorjackpot.in
+adminClient = "https://admin.aviatorjackpot.in"
 merchant = 41906366
 secret_key = 1012cf8833d54745883f745714baca5d 
 JWT_ACCESS_TOKEN=shas$isbwDBWDN2543
