--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 8000
 NODE_ENV = development
 JWT_SECRET_KEY = 2jkljasdlfh83r746w58tigajlhdfalsdf
-DATABASE_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/single_aviator?connection_limit=15&pool_timeout=5&pgbounce=true"
-DIRECT_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/single_aviator"
+DATABASE_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/jackpot?connection_limit=15&pool_timeout=5&pgbounce=true"
+DIRECT_URL="mysql://harsh:MetablockHarshMeta123@62.72.59.182:3306/jackpot"
 client = https://aviatorjackpot.in
 adminClient = "https://admin.aviatorjackpot.in"
 merchant = 41906366
